[package]
name = "cmp_by_derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive macro CmpBy and HashBy, respectively deriving traits `Ord`, `PartialOrd`, `Eq` and `PartialEq`, and `Hash` for structs and enums that can't automatically derive from those traits."
homepage = "https://github.com/tlaferriere/cmp_by_derive"
documentation = "https://github.com/tlaferriere/cmp_by_derive/#readme"
repository = "https://github.com/tlaferriere/cmp_by_derive"
keywords = ["derive", "comparing", "ordering", "no_std", "cmp"]
categories = ["development-tools", "rust-patterns", "development-tools::procedural-macro-helpers", "no_std"]
readme = "README.md"
exclude = [
    ".github/*",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"

[dev-dependencies]
rust-format = "0.3"
trybuild = {version = "1.0.80", features = ["diff"]}

[build-dependencies]
rustc_version = "0.4.0"
